@@ -54,7 +54,8 @@ diag_preamble = |     foreach my $key (sort keys %{ $diag->{config} })
 diag_preamble = |     {
 diag_preamble = |       diag "config.$key=", $diag->{config}->{$key};
 diag_preamble = |     }
-diag_preamble = |     diag "ffi.platypus.memory.strdup_impl=$FFI::Platypus::Memory::_strdup_impl";
+diag_preamble = |     diag "ffi.platypus.memory.strdup_impl =@{[ FFI::Platypus::Memory->_strdup_impl ]}";
+diag_preamble = |     diag "ffi.platypus.memory.strndup_impl=@{[ FFI::Platypus::Memory->_strndup_impl ]}";
 diag_preamble = |     spacer();  
 diag_preamble = |     my %r;
 diag_preamble = |     while(my($k,$v) = each %type_map)
