@@ -7,13 +7,12 @@ use My::ShareConfig;
 
 my $share_config = My::ShareConfig->new;
 
-my $build = FFI::Build->new(
+FFI::Build->new(
   'test',
   source => ['t/ffi/*.c'],
   verbose => 1,
   alien => [$share_config->get('alien')->{class}],
   cflags => ['-Iinclude'],
   dir => 't/ffi',
-);
+)->build;
 
-$build->build;
